# BaseProject

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
src/: CMakeLists.txt  Imgui_CMakeLists.txt  main  main.cpp
src/core/: UserService.h
src/db/: UserRepository.h
src/interfaces/: IUserRepository.h
src/models/: User.h
src/ui/: UserForm.h
tests/: CMakeLists.txt
tests/unit/: UserServiceTest.cpp
